vlib/v/checker/tests/map_init_invalid_syntax.vv
fn main() {
	a := map{}
	println(a)
}
